fix: platform workflow [skip ci]

--- a/.github/workflows/platform-request.yml
+++ b/.github/workflows/platform-request.yml
@@ -165,7 +165,15 @@ jobs:
             const fs = require('fs');
             const path = require('path');
             
-            const platformData = JSON.parse('${{ steps.parse-issue.outputs.platform-data }}');
+            // Parse the platform data safely
+            let platformData;
+            try {
+              platformData = JSON.parse(process.env.PLATFORM_DATA);
+            } catch (error) {
+              core.setFailed(`Failed to parse platform data: ${error.message}`);
+              return false;
+            }
+            
             const newName = platformData.name.toLowerCase();
             const newUrl = platformData.url.toLowerCase();
             
@@ -196,15 +204,21 @@ jobs:
             
             for (const file of jsonFiles) {
               const content = fs.readFileSync(file, 'utf8');
-              const platform = JSON.parse(content);
+              let platform;
+              try {
+                platform = JSON.parse(content);
+              } catch (error) {
+                console.warn(`Failed to parse ${file}: ${error.message}`);
+                continue;
+              }
               
-              if (platform.name.toLowerCase() === newName) {
+              if (platform.name && platform.name.toLowerCase() === newName) {
                 duplicateFound = true;
                 errorMessage = `Platform with name "${platformData.name}" already exists in ${file}`;
                 break;
               }
               
-              if (platform.url.toLowerCase() === newUrl) {
+              if (platform.url && platform.url.toLowerCase() === newUrl) {
                 duplicateFound = true;
                 errorMessage = `Platform with URL "${platformData.url}" already exists in ${file}`;
                 break;
@@ -223,6 +237,8 @@ jobs:
             }
             
             return true;
+          env:
+            PLATFORM_DATA: ${{ steps.parse-issue.outputs.platform-data }}
 
       - name: Verify publisher directory
         id: verify-publisher
