--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.9",
+    "@astrojs/tailwind": "^6.0.0",
+    "astro": "^5.2.5",
     "astro-icon": "^1.1.5",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.5",
     "@iconify-json/ph": "^1.2.2",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/vite": "^4.0.6",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
   }
