--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^6.0.0",
     "astro": "^5.2.5",
     "astro-icon": "^1.1.5",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@iconify-json/ph": "^1.2.2",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.0.6",
+    "autoprefixer": "^10.4.20",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.17"
   }
