--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "devDependencies": {
     "@iconify-json/ph": "^1.2.2",
-    "@tailwindcss/vite": "^4.0.6",
-    "autoprefixer": "^10.4.20",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.9",
+    "tailwind-scrollbar": "^4.0.1",
+    "tailwindcss": "^4.0.9"
   }
 }
