feat: add "andre" as a new option in the platform subject selection

--- a/.github/ISSUE_TEMPLATE/new-platform.yml
+++ b/.github/ISSUE_TEMPLATE/new-platform.yml
@@ -49,6 +49,7 @@ body:
       label: "📖 Fag"
       description: "Hvilket fag hører platformen til?"
       options:
+        - andre
         - billedkunst
         - biologi
         - dansk
